src/main/java/com/antlr4/source/DplParser.java
// Generated from Dpl.g4 by ANTLR 4.4
package com.antlr4.source;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class DplParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__2=1, T__1=2, T__0=3, STATSCMD=4, TRIMFUNC=5, CAPSLKFUNC=6, RENAME=7, 
		STATS=8, WHERE=9, EVAL=10, CHART=11, TIMECHART=12, TABLE=13, SORT=14, 
		LIMIT=15, STATISTIC=16, CHANGE=17, COUNT=18, DC=19, SUMSQ=20, SUM=21, 
		AVG=22, MIN=23, MAX=24, ROUND=25, SUBSTR=26, LEN=27, LOWER=28, UPPER=29, 
		TRIM=30, LTRIM=31, RTRIM=32, REPLACE=33, SPLIT=34, URLDECODE=35, IF=36, 
		UAPARSER=37, JSONPARSER=38, REGEX=39, IPLOCATION=40, POW=41, NOW=42, CASE=43, 
		TONUMBER=44, TOSTRING=45, KV=46, MODEL=47, CONTAINS=48, TO=49, AS=50, 
		BY=51, SPAN=52, AUTO=53, POWER=54, MUL=55, DIVDIV=56, DIV=57, ADD=58, 
		SUB=59, ASSIGN=60, LT=61, LT_EQ=62, GT=63, GT_EQ=64, EQ=65, NOT_EQ1=66, 
		NOT_EQ2=67, TIME=68, LONG=69, DOUBLE=70, ZHONGWEN=71, ID=72, ESC=73, STRING=74, 
		NEWLINE=75, WS=76;
	public static final String[] tokenNames = {
		"<INVALID>", "')'", "','", "'('", "STATSCMD", "TRIMFUNC", "CAPSLKFUNC", 
		"RENAME", "STATS", "WHERE", "EVAL", "CHART", "TIMECHART", "TABLE", "SORT", 
		"LIMIT", "STATISTIC", "CHANGE", "COUNT", "DC", "SUMSQ", "SUM", "AVG", 
		"MIN", "MAX", "ROUND", "SUBSTR", "LEN", "LOWER", "UPPER", "TRIM", "LTRIM", 
		"RTRIM", "REPLACE", "SPLIT", "URLDECODE", "IF", "UAPARSER", "JSONPARSER", 
		"REGEX", "IPLOCATION", "POW", "NOW", "CASE", "TONUMBER", "TOSTRING", "KV", 
		"MODEL", "CONTAINS", "TO", "AS", "BY", "SPAN", "AUTO", "'^'", "'*'", "'//'", 
		"'/'", "'+'", "'-'", "'='", "'<'", "'<='", "'>'", "'>='", "'=='", "'!='", 
		"'<>'", "TIME", "LONG", "DOUBLE", "ZHONGWEN", "ID", "ESC", "STRING", "NEWLINE", 
		"WS"
	};
	public static final int
		RULE_dpl = 0, RULE_stats_exp = 1, RULE_eval_func_exp = 2, RULE_eval_func = 3, 
		RULE_round_exp = 4, RULE_substr_exp = 5, RULE_len_exp = 6, RULE_capslk_exp = 7, 
		RULE_trim_exp = 8, RULE_replace_exp = 9, RULE_split_exp = 10, RULE_urldecode_exp = 11, 
		RULE_if_exp = 12, RULE_uaparser_exp = 13, RULE_jsonparser_exp = 14, RULE_regex_exp = 15, 
		RULE_iplocation_exp = 16, RULE_pow_exp = 17, RULE_now_exp = 18, RULE_case_exp = 19, 
		RULE_tonumber_exp = 20, RULE_tostring_exp = 21, RULE_kv_exp = 22, RULE_model_exp = 23, 
		RULE_stats_func_exp = 24, RULE_count_eval_boolean = 25, RULE_stats_func = 26, 
		RULE_boolean_exp = 27, RULE_contains_exp = 28, RULE_byf = 29;
	public static final String[] ruleNames = {
		"dpl", "stats_exp", "eval_func_exp", "eval_func", "round_exp", "substr_exp", 
		"len_exp", "capslk_exp", "trim_exp", "replace_exp", "split_exp", "urldecode_exp", 
		"if_exp", "uaparser_exp", "jsonparser_exp", "regex_exp", "iplocation_exp", 
		"pow_exp", "now_exp", "case_exp", "tonumber_exp", "tostring_exp", "kv_exp", 
		"model_exp", "stats_func_exp", "count_eval_boolean", "stats_func", "boolean_exp", 
		"contains_exp", "byf"
	};

	@Override
	public String getGrammarFileName() { return "Dpl.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DplParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class DplContext extends ParserRuleContext {
		public DplContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dpl; }
	 
		public DplContext() { }
		public void copyFrom(DplContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Change_dplContext extends DplContext {
		public TerminalNode STRING(int i) {
			return getToken(DplParser.STRING, i);
		}
		public TerminalNode CHANGE() { return getToken(DplParser.CHANGE, 0); }
		public TerminalNode ID() { return getToken(DplParser.ID, 0); }
		public TerminalNode TO() { return getToken(DplParser.TO, 0); }
		public List<TerminalNode> STRING() { return getTokens(DplParser.STRING); }
		public Change_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitChange_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Table_dplContext extends DplContext {
		public List<TerminalNode> ID() { return getTokens(DplParser.ID); }
		public TerminalNode TABLE() { return getToken(DplParser.TABLE, 0); }
		public TerminalNode ID(int i) {
			return getToken(DplParser.ID, i);
		}
		public Table_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitTable_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_dplContext extends DplContext {
		public TerminalNode EVAL() { return getToken(DplParser.EVAL, 0); }
		public TerminalNode ID() { return getToken(DplParser.ID, 0); }
		public Eval_funcContext eval_func() {
			return getRuleContext(Eval_funcContext.class,0);
		}
		public Eval_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Stats_dplContext extends DplContext {
		public Stats_expContext stats_exp(int i) {
			return getRuleContext(Stats_expContext.class,i);
		}
		public TerminalNode TIME() { return getToken(DplParser.TIME, 0); }
		public TerminalNode BY() { return getToken(DplParser.BY, 0); }
		public ByfContext byf() {
			return getRuleContext(ByfContext.class,0);
		}
		public List<Stats_expContext> stats_exp() {
			return getRuleContexts(Stats_expContext.class);
		}
		public TerminalNode SPAN() { return getToken(DplParser.SPAN, 0); }
		public TerminalNode STATSCMD() { return getToken(DplParser.STATSCMD, 0); }
		public Stats_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitStats_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Limit_dplContext extends DplContext {
		public TerminalNode LIMIT() { return getToken(DplParser.LIMIT, 0); }
		public TerminalNode LONG() { return getToken(DplParser.LONG, 0); }
		public Limit_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitLimit_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Where_dplContext extends DplContext {
		public TerminalNode WHERE() { return getToken(DplParser.WHERE, 0); }
		public Boolean_expContext boolean_exp() {
			return getRuleContext(Boolean_expContext.class,0);
		}
		public Where_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitWhere_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Statistic_dplContext extends DplContext {
		public TerminalNode STATISTIC() { return getToken(DplParser.STATISTIC, 0); }
		public Statistic_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitStatistic_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Rename_dplContext extends DplContext {
		public TerminalNode AS() { return getToken(DplParser.AS, 0); }
		public List<TerminalNode> ID() { return getTokens(DplParser.ID); }
		public TerminalNode RENAME() { return getToken(DplParser.RENAME, 0); }
		public TerminalNode ID(int i) {
			return getToken(DplParser.ID, i);
		}
		public Rename_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitRename_dpl(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Sort_dplContext extends DplContext {
		public Token op;
		public TerminalNode ID() { return getToken(DplParser.ID, 0); }
		public TerminalNode SORT() { return getToken(DplParser.SORT, 0); }
		public TerminalNode SUB() { return getToken(DplParser.SUB, 0); }
		public TerminalNode ADD() { return getToken(DplParser.ADD, 0); }
		public Sort_dplContext(DplContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitSort_dpl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DplContext dpl() throws RecognitionException {
		DplContext _localctx = new DplContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_dpl);
		int _la;
		try {
			setState(110);
			switch (_input.LA(1)) {
			case STATSCMD:
				_localctx = new Stats_dplContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(60); match(STATSCMD);
				setState(64);
				_la = _input.LA(1);
				if (_la==SPAN) {
					{
					setState(61); match(SPAN);
					setState(62); match(ASSIGN);
					setState(63); match(TIME);
					}
				}

				setState(66); stats_exp();
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << EVAL) | (1L << COUNT) | (1L << DC) | (1L << SUMSQ) | (1L << SUM) | (1L << AVG) | (1L << MIN) | (1L << MAX))) != 0)) {
					{
					{
					setState(68);
					_la = _input.LA(1);
					if (_la==T__1) {
						{
						setState(67); match(T__1);
						}
					}

					setState(70); stats_exp();
					}
					}
					setState(75);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(78);
				_la = _input.LA(1);
				if (_la==BY) {
					{
					setState(76); match(BY);
					setState(77); byf();
					}
				}

				}
				break;
			case RENAME:
				_localctx = new Rename_dplContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(80); match(RENAME);
				setState(81); match(ID);
				setState(82); match(AS);
				setState(83); match(ID);
				}
				break;
			case WHERE:
				_localctx = new Where_dplContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(84); match(WHERE);
				setState(85); boolean_exp();
				}
				break;
			case EVAL:
				_localctx = new Eval_dplContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(86); match(EVAL);
				setState(87); match(ID);
				setState(88); match(ASSIGN);
				setState(89); eval_func(0);
				}
				break;
			case TABLE:
				_localctx = new Table_dplContext(_localctx);
				enterOuterAlt(_localctx, 5);
				{
				setState(90); match(TABLE);
				setState(91); match(ID);
				setState(96);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__1) {
					{
					{
					setState(92); match(T__1);
					setState(93); match(ID);
					}
					}
					setState(98);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			case SORT:
				_localctx = new Sort_dplContext(_localctx);
				enterOuterAlt(_localctx, 6);
				{
				setState(99); match(SORT);
				setState(100);
				((Sort_dplContext)_localctx).op = _input.LT(1);
				_la = _input.LA(1);
				if ( !(_la==ADD || _la==SUB) ) {
					((Sort_dplContext)_localctx).op = (Token)_errHandler.recoverInline(this);
				}
				consume();
				setState(101); match(ID);
				}
				break;
			case LIMIT:
				_localctx = new Limit_dplContext(_localctx);
				enterOuterAlt(_localctx, 7);
				{
				setState(102); match(LIMIT);
				setState(103); match(LONG);
				}
				break;
			case STATISTIC:
				_localctx = new Statistic_dplContext(_localctx);
				enterOuterAlt(_localctx, 8);
				{
				setState(104); match(STATISTIC);
				}
				break;
			case CHANGE:
				_localctx = new Change_dplContext(_localctx);
				enterOuterAlt(_localctx, 9);
				{
				setState(105); match(CHANGE);
				setState(106); match(ID);
				setState(107); match(STRING);
				setState(108); match(TO);
				setState(109); match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Stats_expContext extends ParserRuleContext {
		public Stats_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stats_exp; }
	 
		public Stats_expContext() { }
		public void copyFrom(Stats_expContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Stats_exp_dpl_statsContext extends Stats_expContext {
		public Token newid;
		public TerminalNode AS() { return getToken(DplParser.AS, 0); }
		public TerminalNode ID() { return getToken(DplParser.ID, 0); }
		public Stats_func_expContext stats_func_exp() {
			return getRuleContext(Stats_func_expContext.class,0);
		}
		public Stats_exp_dpl_statsContext(Stats_expContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitStats_exp_dpl_stats(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Stats_exp_dpl_evalContext extends Stats_expContext {
		public Token newid;
		public TerminalNode AS() { return getToken(DplParser.AS, 0); }
		public TerminalNode ID() { return getToken(DplParser.ID, 0); }
		public Eval_func_expContext eval_func_exp() {
			return getRuleContext(Eval_func_expContext.class,0);
		}
		public Stats_exp_dpl_evalContext(Stats_expContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitStats_exp_dpl_eval(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stats_expContext stats_exp() throws RecognitionException {
		Stats_expContext _localctx = new Stats_expContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stats_exp);
		int _la;
		try {
			setState(122);
			switch (_input.LA(1)) {
			case COUNT:
			case DC:
			case SUMSQ:
			case SUM:
			case AVG:
			case MIN:
			case MAX:
				_localctx = new Stats_exp_dpl_statsContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(112); stats_func_exp();
				setState(115);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(113); match(AS);
					setState(114); ((Stats_exp_dpl_statsContext)_localctx).newid = match(ID);
					}
				}

				}
				break;
			case EVAL:
				_localctx = new Stats_exp_dpl_evalContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(117); eval_func_exp();
				setState(120);
				_la = _input.LA(1);
				if (_la==AS) {
					{
					setState(118); match(AS);
					setState(119); ((Stats_exp_dpl_evalContext)_localctx).newid = match(ID);
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eval_func_expContext extends ParserRuleContext {
		public TerminalNode EVAL() { return getToken(DplParser.EVAL, 0); }
		public Eval_funcContext eval_func() {
			return getRuleContext(Eval_funcContext.class,0);
		}
		public Eval_func_expContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval_func_exp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_func_exp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Eval_func_expContext eval_func_exp() throws RecognitionException {
		Eval_func_expContext _localctx = new Eval_func_expContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_eval_func_exp);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); match(EVAL);
			setState(125); match(T__0);
			setState(126); eval_func(0);
			setState(127); match(T__2);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Eval_funcContext extends ParserRuleContext {
		public Eval_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eval_func; }
	 
		public Eval_funcContext() { }
		public void copyFrom(Eval_funcContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Eval_expr_dpl_nowContext extends Eval_funcContext {
		public Now_expContext now_exp() {
			return getRuleContext(Now_expContext.class,0);
		}
		public Eval_expr_dpl_nowContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_now(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_urldecodeContext extends Eval_funcContext {
		public Urldecode_expContext urldecode_exp() {
			return getRuleContext(Urldecode_expContext.class,0);
		}
		public Eval_expr_dpl_urldecodeContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_urldecode(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_replaceContext extends Eval_funcContext {
		public Replace_expContext replace_exp() {
			return getRuleContext(Replace_expContext.class,0);
		}
		public Eval_expr_dpl_replaceContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_replace(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_jsonparserContext extends Eval_funcContext {
		public Jsonparser_expContext jsonparser_exp() {
			return getRuleContext(Jsonparser_expContext.class,0);
		}
		public Eval_expr_dpl_jsonparserContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_jsonparser(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_op_addsubContext extends Eval_funcContext {
		public Token op;
		public Eval_funcContext eval_func(int i) {
			return getRuleContext(Eval_funcContext.class,i);
		}
		public List<Eval_funcContext> eval_func() {
			return getRuleContexts(Eval_funcContext.class);
		}
		public Eval_expr_dpl_op_addsubContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_op_addsub(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_stats_funcContext extends Eval_funcContext {
		public Stats_func_expContext stats_func_exp() {
			return getRuleContext(Stats_func_expContext.class,0);
		}
		public Eval_expr_dpl_stats_funcContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_stats_func(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_op_muldivContext extends Eval_funcContext {
		public Token op;
		public Eval_funcContext eval_func(int i) {
			return getRuleContext(Eval_funcContext.class,i);
		}
		public List<Eval_funcContext> eval_func() {
			return getRuleContexts(Eval_funcContext.class);
		}
		public Eval_expr_dpl_op_muldivContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_op_muldiv(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_op_powerContext extends Eval_funcContext {
		public Token op;
		public Eval_funcContext eval_func(int i) {
			return getRuleContext(Eval_funcContext.class,i);
		}
		public List<Eval_funcContext> eval_func() {
			return getRuleContexts(Eval_funcContext.class);
		}
		public Eval_expr_dpl_op_powerContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_op_power(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_trimContext extends Eval_funcContext {
		public Trim_expContext trim_exp() {
			return getRuleContext(Trim_expContext.class,0);
		}
		public Eval_expr_dpl_trimContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DplVisitor ) return ((DplVisitor<? extends T>)visitor).visitEval_expr_dpl_trim(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Eval_expr_dpl_ifContext extends Eval_funcContext {
		public If_expContext if_exp() {
			return getRuleContext(If_expContext.class,0);
		}
		public Eval_expr_dpl_ifContext(Eval_funcContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
